--- a/.gitignore
+++ b/.gitignore
@@ -86,6 +86,9 @@ celerybeat-schedule
 .venv
 venv/
 ENV/
+pyvenv.cfg
+bin/
+pip-selfcheck.json
 
 # Spyder project settings
 .spyderproject
@@ -99,3 +102,6 @@ ENV/
 
 # mypy
 .mypy_cache/
+
+# PyCharm
+.idea/
