--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,94 @@
-google-api-python-client==1.6.6
-httplib2==0.11.3
-numpy==1.14.2
-oauth2client==4.1.2
-pandas==0.22.0
-pyasn1==0.4.2
-pyasn1-modules==0.2.1
-python-dateutil==2.7.2
-pytz==2018.3
-rsa==3.4.2
-six==1.11.0
+apiclient==1.0.4
+appnope==0.1.0
+astroid==2.2.5
+attrs==19.1.0
+backcall==0.1.0
+beautifulsoup4==4.7.1
+bleach==3.1.0
+CacheControl==0.12.5
+cachetools==3.1.1
+certifi==2019.9.11
+chardet==3.0.4
+Click==7.0
+colorclass==2.2.0
+decorator==4.3.2
+defusedxml==0.5.0
+docopt==0.6.2
+entrypoints==0.3
+firebase-admin==3.0.0
+google==2.0.2
+google-api-core==1.14.2
+google-api-python-client==1.7.11
+google-auth==1.6.3
+google-auth-httplib2==0.0.3
+google-cloud==0.34.0
+google-cloud-bigquery==1.20.0
+google-cloud-core==1.0.3
+google-cloud-firestore==1.4.0
+google-cloud-storage==1.19.1
+google-resumable-media==0.4.1
+googleapis-common-protos==1.6.0
+grpcio==1.19.0
+httplib2==0.13.1
+idna==2.8
+ipykernel==5.1.0
+ipython==7.3.0
+ipython-genutils==0.2.0
+ipywidgets==7.4.2
+isort==4.3.21
+jedi==0.13.3
+Jinja2==2.10
+jsonschema==3.0.1
+jupyter-client==5.2.4
+jupyter-console==6.0.0
+jupyter-core==4.4.0
+lazy-object-proxy==1.4.1
+MarkupSafe==1.1.1
+mccabe==0.6.1
+mistune==0.8.4
+msgpack==0.6.1
+nbconvert==5.4.1
+nbformat==4.4.0
+notebook==5.7.4
+numpy==1.16.2
+oauth2client==4.1.3
+packaging==19.0
+pandas==0.24.2
+pandocfilters==1.4.2
+parso==0.3.4
+pexpect==4.6.0
+pickleshare==0.7.5
+pip-autoremove==0.9.1
+pip-tools==3.6.0
+pip-upgrader==1.4.6
+prometheus-client==0.6.0
+prompt-toolkit==2.0.9
+protobuf==3.9.2
+ptyprocess==0.6.0
+pyasn1==0.4.7
+pyasn1-modules==0.2.6
+Pygments==2.3.1
+pylint==2.3.1
+pyparsing==2.4.0
+pyrsistent==0.14.11
+python-dateutil==2.8.0
+pytz==2019.2
+pyzmq==18.0.0
+qtconsole==4.4.3
+requests==2.22.0
+rsa==4.0
+Send2Trash==1.5.0
+six==1.12.0
+soupsieve==1.9.1
+terminado==0.8.1
+terminaltables==3.1.0
+testpath==0.4.2
+tornado==5.1.1
+traitlets==4.3.2
+typed-ast==1.4.0
 uritemplate==3.0.0
+urllib3==1.25.6
+wcwidth==0.1.7
+webencodings==0.5.1
+widgetsnbextension==3.4.2
+wrapt==1.11.2
